fix size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -256,12 +256,12 @@ html, body {
 /* Mobile */
 @media only screen and (max-width: 767px) {
     #title {
-        font-size: 1em;
+        font-size: 0.9em;
         top: 10px; left: 10px;
     }
 
     #menu {
-        font-size: 0.8em;
+        font-size: 0.7em;
         top: 13px; right: 10px;
     }
 
